src/test/deca/codegen/valid/created/objet/thisMethod.deca
class A {
    int x;
    void m(){
        if(this.x == 0){
            println("passed");
        }
    }
    void n(){
        this.m();
    }
}


{
    A a =new A();
    a.n();

}