src/test/deca/codegen/invalid/created/objet/invalidCall.deca
// error : Selection on something that is not a field

class A {
    void m(){
        println("passed");
    }
}

{
    A a = new A();
    a.m;
}